--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="index.html" class="navbar-brand">Soft Landing</a>
+                    <a href="index.html" class="navbar-brand">James Bednall</a>
                </div>
 
                <!-- MENU LINKS -->
