--- a/index.html
+++ b/index.html
@@ -100,28 +100,24 @@
 
                     <div class="col-md-12 col-sm-12">
                          <div class="section-title">
-                              <h1>What you get</h1>
+                              <h1>Intro</h1>
                          </div>
                     </div>
 
                     <div class="col-md-6 col-sm-6">
-                         <ul class="nav nav-tabs" role="tablist">
+                       <!--  <ul class="nav nav-tabs" role="tablist">
                               <li class="active"><a href="#tab01" aria-controls="tab01" role="tab" data-toggle="tab">Responsive</a></li>
 
                               <li><a href="#tab02" aria-controls="tab02" role="tab" data-toggle="tab">Mobile</a></li>
 
                               <li><a href="#tab03" aria-controls="tab03" role="tab" data-toggle="tab">Support</a></li>
-                         </ul>
+                         </ul> -->
 
                          <div class="tab-content">
                               <div class="tab-pane active" id="tab01" role="tabpanel">
                                    <div class="tab-pane-item">
-                                        <h2>Minimal Design</h2>
+                                        <!-- <h2>Minimal Design</h2> -->
                                         <p>Nam feugiat a ante sollicitudin luctus. Quisque eget placerat massa. Ut quis ligula ornare, pellentesque velit eget, vestibulum est. Donec pretium tristique elit eget sodales. Pellentesque posuere.</p>
-                                   </div>
-                                   <div class="tab-pane-item">
-                                        <h2>Easy to use</h2>
-                                        <p>Aliquam massa massa, consectetur non mattis fringilla, sodales ac turpis. Morbi ac felis sagittis, faucibus mauris vitae, placerat mauris.</p>
                                    </div>
                               </div>
 
