--- a/index.html
+++ b/index.html
@@ -117,7 +117,14 @@
                               <div class="tab-pane active" id="tab01" role="tabpanel">
                                    <div class="tab-pane-item">
                                         <!-- <h2>Minimal Design</h2> -->
-                                        <p>Nam feugiat a ante sollicitudin luctus. Quisque eget placerat massa. Ut quis ligula ornare, pellentesque velit eget, vestibulum est. Donec pretium tristique elit eget sodales. Pellentesque posuere.</p>
+                                        <p>I am a lecturer in linguistics at Batchelor Institute of Indigenous Tertiary Education, a visiting fellow at the Australian National 
+                                             University and a research affiliate with the ARC Centre of Excellence for the Dynamics of Language (CoEDL).</p>
+
+                                        <p>I have over a decade of experience as a linguist, working in the research, teaching, community development and not-for-profit 
+                                             sectors. This professional background has included substantial project and people management, teamwork, and 
+                                             local/national/international collaboration. Find out more about my Research, Projects, Publications and Teaching.</p>
+
+                                             <p style="font-style: italic;">Aboriginal and Torres Strait Islander readers are warned that this website contains photos and mentions names of deceased persons, which may cause sadness or distress. Photos and names are provided with permission.</p>
                                    </div>
                               </div>
 
