--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-	<title>Soft Landing Page by Tooplate</title>
+	<title>James Bednall</title>
 	<!--
 
     Template 2106 Soft Landing
@@ -79,12 +79,7 @@
 
                     <div class="col-md-offset-3 col-md-6 col-sm-12">
                          <div class="home-info">
-                              <h3>professional landing page</h3>
-                              <h1>We help you manage your website successfully!</h1>
-                              <form action="" method="get" class="online-form">
-                                   <input type="email" name="email" class="form-control" placeholder="Enter your email" required>
-                                   <button type="submit" class="form-control">Get started</button>
-                              </form>
+                              <h1>James Bednall</h1>
                          </div>
                     </div>
 
@@ -169,7 +164,7 @@
 
                     <div class="col-md-offset-3 col-md-6 col-sm-12">
                          <div class="section-title">
-                              <h1>Professional Team for you</h1>
+                              <h1>About Me</h1>
                          </div>
                     </div>
 
@@ -177,9 +172,15 @@
                          <div class="team-thumb">
                               <img src="images/team-image1.jpg" class="img-responsive" alt="Andrew Orange">
                               <div class="team-info team-thumb-up">
-                                   <h2>Andrew Orange</h2>
-                                   <small>Art Director</small>
-                                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing eiusmod tempor incididunt ut labore et dolore magna.</p>
+                                   <h2>James Bednall</h2>
+                                   <small>Linguist</small>
+                                   <p>I am a linguist, based in Darwin, Australia, on Larrakia country. I studied linguistics and music (BA(Hons)/BMus) 
+                                        at the University of Western Australia (2006-2011), before working as a linguist at Bundiyarra – Irra Wangga (BIW) 
+                                        Language Centre (2011-2014). I continue to collaborate with BIW as a consultant, particularly working with the Badimaya 
+                                        community. I undertook my PhD at the Australian National University & Université de Paris (2015-2020), with a thesis examining 
+                                        temporal, aspectual and modal expression in Anindilyakwa, the language of the Groote Eylandt archipelago. I worked in various 
+                                        positions (consultant, linguist and language centre coordinator) for the Anindilyakwa Land Council’s Groote Eylandt Language 
+                                        Centre (2017-2021). I have worked as a lecturer in linguistics at Batchelor Institute of Indigenous Tertiary Education since 2021.</p>
                               </div>
                          </div>
                     </div>
