--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     </div>
 
                     <div class="col-md-4 col-sm-4">
-                         <div class="team-thumb-down">
+                         <div class="team-thumb">
                               <img src="images/team-image1.jpg" class="img-responsive" alt="Andrew Orange">
                               <div class="team-info team-thumb-up">
                                    <h2>James Bednall</h2>
