--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
      </section>
 
 
-     <!-- ABOUT -->
+     <!-- ABOUT ME -->
      <section id="about" data-stellar-background-ratio="0.5">
           <div class="container">
                <div class="row">
 
-                    <div class="col-md-offset-3 col-md-6 col-sm-12">
+                    <div class="col-sm-6">
                          <div class="section-title">
                               <h1>About Me</h1>
                          </div>
