--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
      </section>
 
 
-     <!-- ABOUT ME -->
+     <!-- ABOUT ME old
      <section id="about" data-stellar-background-ratio="0.5">
           <div class="container">
                <div class="row">
@@ -183,7 +183,7 @@
                                         Centre (2017-2021). I have worked as a lecturer in linguistics at Batchelor Institute of Indigenous Tertiary Education since 2021.</p>
                               </div>
                          </div>
-                    </div>
+                    </div> -->
 <!--
                     <div class="col-md-4 col-sm-4">
                          <div class="team-thumb">
@@ -225,7 +225,7 @@
                          <div class="testimonial-info">
                               
                               <div class="section-title">
-                                   <h1>What People Say</h1>
+                                   <h1>About Me</h1>
                               </div>
 
                               <div class="owl-carousel owl-theme">
@@ -237,21 +237,7 @@
                                         </div>
                                    </div>
 
-                                   <div class="item">
-                                        <h3>Donec pretium tristique elit eget sodales. Pellentesque posuere, nunc id interdum venenatis, leo odio cursus sapien, ac malesuada nisl libero eget urna.</h3>
-                                        <div class="testimonial-item">
-                                             <img src="images/tst-image2.jpg" class="img-responsive" alt="Sofia">
-                                             <h4>Sofia</h4>
-                                        </div>
-                                   </div>
-
-                                   <div class="item">
-                                        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing eiusmod tempor incididunt ut labore et dolore magna.</h3>
-                                        <div class="testimonial-item">
-                                             <img src="images/tst-image3.jpg" class="img-responsive" alt="Monica">
-                                             <h4>Monica</h4>
-                                        </div>
-                                   </div>
+                              
                               </div>
 
                          </div>
