--- a/index.html
+++ b/index.html
@@ -230,11 +230,13 @@
 
                               <div class="owl-carousel owl-theme">
                                    <div class="item">
-                                        <h3>Vestibulum tempor facilisis efficitur. Sed nec nisi sit amet nibh pellentesque elementum. In viverra ipsum ornare sapien rhoncus ullamcorper.</h3>
-                                        <div class="testimonial-item">
-                                             <img src="images/tst-image1.jpg" class="img-responsive" alt="Michael">
-                                             <h4>Michael</h4>
-                                        </div>
+                                        <p>I am a linguist, based in Darwin, Australia, on Larrakia country. I studied linguistics and music (BA(Hons)/BMus) 
+                                             at the University of Western Australia (2006-2011), before working as a linguist at Bundiyarra – Irra Wangga (BIW) 
+                                             Language Centre (2011-2014). I continue to collaborate with BIW as a consultant, particularly working with the Badimaya 
+                                             community. I undertook my PhD at the Australian National University & Université de Paris (2015-2020), with a thesis examining 
+                                             temporal, aspectual and modal expression in Anindilyakwa, the language of the Groote Eylandt archipelago. I worked in various 
+                                             positions (consultant, linguist and language centre coordinator) for the Anindilyakwa Land Council’s Groote Eylandt Language 
+                                             Centre (2017-2021). I have worked as a lecturer in linguistics at Batchelor Institute of Indigenous Tertiary Education since 2021.</p>
                                    </div>
 
                               
