--- a/index.html
+++ b/index.html
@@ -212,13 +212,13 @@
      </section>
 
 
-     <!-- TESTIMONIAL -->
+     <!-- About Me FINAL -->
      <section id="testimonial" data-stellar-background-ratio="0.5">
           <div class="container">
                <div class="row">
 
                     <div class="col-md-6 col-sm-12">
-                         <div class="testimonial-image"></div>
+                         <div class="profile-pic"></div>
                     </div>
 
                     <div class="col-md-6 col-sm-12">
