--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                <div class="row">
 
                     <div class="col-md-6 col-sm-12">
-                         <div class="profile-pic"></div>
+                         <div class="testimonial-pic"></div>
                     </div>
 
                     <div class="col-md-6 col-sm-12">
