--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
                          <div class="tab-content">
                               <div class="tab-pane active" id="tab01" role="tabpanel">
-                                   <div class="tab-pane-item">
+                                   <!--<div class="tab-pane-item">-->
                                         <!-- <h2>Minimal Design</h2> -->
                                         <p>I am a lecturer in linguistics at Batchelor Institute of Indigenous Tertiary Education, a visiting fellow at the Australian National 
                                              University and a research affiliate with the ARC Centre of Excellence for the Dynamics of Language (CoEDL).</p>
