--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
                          </div>
                     </div>
 
-                    <div class="col-md-6 col-sm-6">
-                       <!--  <ul class="nav nav-tabs" role="tablist">
+                   <!--  <div class="col-md-6 col-sm-6">
+                        <ul class="nav nav-tabs" role="tablist">
                               <li class="active"><a href="#tab01" aria-controls="tab01" role="tab" data-toggle="tab">Responsive</a></li>
 
                               <li><a href="#tab02" aria-controls="tab02" role="tab" data-toggle="tab">Mobile</a></li>
@@ -356,7 +356,7 @@
                                              <p style="font-style: italic;">Aboriginal and Torres Strait Islander readers are warned that this website contains photos and mentions names of deceased persons, which may cause sadness or distress. Photos and names are provided with permission.</p>
                                    </div>
                               </div>
-
+<!--
 
                               <div class="tab-pane" id="tab02" role="tabpanel">
                                    <div class="tab-pane-item">
@@ -382,7 +382,8 @@
                                         <h2>Managed Stuffs</h2>
                                         <p>Quisque ullamcorper sem quis sapien cursus efficitur. Sed id sodales ipsum. Morbi eleifend tempus erat sit amet vehicula. Nulla at posuere tellus, non mattis erat. Nulla id massa gravida.</p>
                                    </div>
-                              </div>
+                              </div>-->
+
                          </div>
 
                     </div>
