--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
                               <li><a href="#tab03" aria-controls="tab03" role="tab" data-toggle="tab">Support</a></li>
                          </ul> -->
 
-                         <div class="tab-content">
-                              <div class="tab-pane active" id="tab01" role="tabpanel">
+                         <div class="container">
+                              <div class="row">
                                    <!--<div class="tab-pane-item">-->
                                         <!-- <h2>Minimal Design</h2> -->
                                         <p>I am a lecturer in linguistics at Batchelor Institute of Indigenous Tertiary Education, a visiting fellow at the Australian National 
