--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     
 </section>
 <br><br><br>
-<center><h1>Test</h1></center>
+<center><h1>Test 2</h1></center>
 <br><br><br>
 <!-- Research -->
 
