--- a/index.html
+++ b/index.html
@@ -58,9 +58,16 @@
                     <ul class="nav navbar-nav">
                          <li><a href="#home" class="smoothScroll">Home</a></li>
                          <li><a href="#aboutme" class="smoothScroll">About Me</a></li>
-                         <li><a href="#about" class="smoothScroll">About us</a></li>
-                         <li><a href="#pricing" class="smoothScroll">Pricing</a></li>
+                         <li><a href="#research" class="smoothScroll">Research</a></li>
+                         <li><a href="#languagecommunities" class="smoothScroll">Language Communities</a></li>
+                         <li><a href="#projects" class="smoothScroll">Projects</a></li>
+                         <li><a href="#publications" class="smoothScroll">Publications</a></li>
+                         <li><a href="#presentations" class="smoothScroll">Presentations</a></li>
+                         <li><a href="#teaching" class="smoothScroll">Teaching</a></li>
+                         <li><a href="#cv" class="smoothScroll">CV</a></li>
                          <li><a href="#contact" class="smoothScroll">Contact</a></li>
+
+
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                          <li><a href="#">Say hello - <span>info@soft.co</span></a></li>
