--- a/index.html
+++ b/index.html
@@ -57,21 +57,16 @@
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                          <li><a href="#home" class="smoothScroll">Home</a></li>
-                         <li><a href="#aboutme" class="smoothScroll">About Me</a></li>
                          <li><a href="#research" class="smoothScroll">Research</a></li>
                          <li><a href="#languagecommunities" class="smoothScroll">Language Communities</a></li>
                          <li><a href="#projects" class="smoothScroll">Projects</a></li>
-                         <li><a href="#publications" class="smoothScroll">Publications</a></li>
-                         <li><a href="#presentations" class="smoothScroll">Presentations</a></li>
+                         <li><a href="#publications" class="smoothScroll">Publications & Presentations</a></li>
                          <li><a href="#teaching" class="smoothScroll">Teaching</a></li>
-                         <li><a href="#cv" class="smoothScroll">CV</a></li>
                          <li><a href="#contact" class="smoothScroll">Contact</a></li>
 
 
                     </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                         <li><a href="#">Say hello - <span>info@soft.co</span></a></li>
-                    </ul>
+                  
                </div>
 
           </div>
@@ -123,7 +118,7 @@
 <!-- About Me -->
 <br><br><br>
 
-<center><h1>About Me</h1></center>
+<center><h1>About</h1></center>
 
 <br><br><br>
 
@@ -193,9 +188,13 @@
                </div>
 
 
-               <div class="col-sm-6 col-sm-6">
+              <!-- <div class="col-sm-6 col-sm-6">
                     <img src="../jamesbednow.github.io/images/Sections/Research.JPG"  height="500px">
                     </div>
+               </div>-->
+
+               <div class="col-md-6 col-sm-12">
+                    <div class="research-image"></div>
                </div>
             
 
