--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     </div>
                </div>-->
 
-               <div class="col-md-6 col-sm-12">
+               <div class="col-sm-6 col-sm-6">
                     <div class="research-image"></div>
                </div>
             
