--- a/index.html
+++ b/index.html
@@ -504,7 +504,9 @@
 
 
 
-     <!-- Intro -->
+     <!-- Publications -->
+     <br><br><br>
+<center><h1>Publications</h1></center>
      <section id="publications" data-stellar-background-ratio="0.5">
           <div class="container">
                <div class="row">
