--- a/index.html
+++ b/index.html
@@ -519,8 +519,9 @@
                          
                               <p><br><strong>Bednall, James</strong> (compiler). 2021. Badimaya dictionary: An Aboriginal language of Western Australia (2nd ed.) Geraldton, Australia: 
                               Bundiyarra - Irra Wangga Language Centre. 128 pages. (1st ed. published 2014).</p>
-                              
                               <br>
+
+                              <div class="project-image5" onclick="window.open('/images/Sections/Badimaya-Guwaga.png','mywindow');" style="cursor: pointer;"></div>
                               <p><strong>Bednall, James</strong> (ed). 2014. Badimaya Guwaga = Talking Badimaya: An illustrated wordlist of the Badimaya language of Western Australia. 
                               Geraldton, Australia: Bundiyarra - Irra Wangga Language Centre. 104 pages.</p>
                               <br>
