--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
      
                               <div class="project-image5" onclick="window.open('/images/Sections/Badimaya-dictionary.png','mywindow');" style="cursor: pointer;"></div>
                          
-                              <p><br><strong>Bednall, James</strong> (compiler). 2021. Badimaya dictionary: An Aboriginal language of Western Australia (2nd ed.) Geraldton, Australia: 
+                              <p><strong>Bednall, James</strong> (compiler). 2021. Badimaya dictionary: An Aboriginal language of Western Australia (2nd ed.) Geraldton, Australia: 
                               Bundiyarra - Irra Wangga Language Centre. 128 pages. (1st ed. published 2014).</p>
                               <br>
 
