--- a/index.html
+++ b/index.html
@@ -570,17 +570,25 @@
                          <div class="project-image7" onclick="window.open('/images/Sections/Nganang-Badimaya-Wangga-1.png','mywindow');" style="cursor: pointer;"></div>
                          <p><strong>Bednall, James</strong>, Sue Chiera and Rosie Sitorus (eds). 2017. Nganang Badimaya Wangga: Yarns with Gami Ollie George. Geraldton, Australia: 
                               Bundiyarra - Irra Wangga Language Centre. 92 pages.</p>
-                              <br>
+                         <br>
+
+                         <div class="project-image8" onclick="window.open('/images/Sections/On-Badimaya-Country.jpg','mywindow');" style="cursor: pointer;"></div>
                          <p>Wagner, Johanna and <strong>James Bednall</strong> (eds). 2013. On Badimaya Country. Geraldton, Australia: Combined Universities Centre for Rural Health 
                               (CUCRH). 60 pages.</p>
                          <br>
+
+                         <div class="project-image9" onclick="window.open('/images/Sections/Badimaya-seasonal-calendar.png','mywindow');" style="cursor: pointer;"></div>
                          <p>Wagner, Johanna and <strong>James Bednall</strong> (eds). 2013. Badimaya Seasonal Calendar. Geraldton, Australia: Combined Universities Centre for Rural 
                               Health (CUCRH). 15 pages.</p>
                          <br>
+
+                         <div class="project-image10" onclick="window.open('/images/Sections/Bush-yarns-from-Mt-Magnet.png','mywindow');" style="cursor: pointer;"></div>
                          <p><strong>Bednall, James</strong> (ed). 2013. Bush Yarns from Mt Magnet Series: Ngalimi wadha marun.gu = looking for quandongs; Ngalimi yan.guwa wadha 
                               bimbawu = looking for bimba; Wandi guwiyarl yuga? = where is the goanna? Geraldton, Australia: Bundiyarra - Irra Wangga Language Centre. 
                               70 pages.</p>
                          <br>
+
+                         <div class="project-image11" onclick="window.open('/images/Sections/Joe-Benjamin-Stories.png','mywindow');" style="cursor: pointer;"></div>
                          <p><strong>Bednall, James</strong> (ed). 2013. Joe Benjamin Stories: Story about the Mallee Hen and The Porcupine Story. Geraldton, Australia: Irra Wangga 
                               Language Centre. 20 pages.</p>
                          <br>
