--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                          
                          <p><strong>Bednall, James</strong>. 2013. ‘Changing opinions or persisting ideologies: An exploratory study into attitudes to Aboriginal languages by non-Indigenous 
                               Australians’ in C. Conlan (ed.) Refereed proceedings of the Applied Linguistic Association of Australia Annual Conference 2012, Perth, Australia, 
-                              433-461. <a href="http://humanities.curtin.edu.au/schools/EDU/education/pdf/alaa/JBednall.pdf" target="_blank">http://humanities.curtin.edu.au/schools/EDU/education/pdf/alaa/JBednall.pdf</a></p>
+                              433-461.</p>
                          <br>
 
                          <h3>Theses</h3>
@@ -597,7 +597,7 @@
                               PARADISEC. <a href="http://catalog.paradisec.org.au/collections/JRB1" target="_blank">http://catalog.paradisec.org.au/collections/JRB1</a></p>
                          <br>
                          <p><strong>Bednall, James</strong> (collector). 2012-2014. Badimaya language recordings, 2012-2014. [IRRA- WANGGA_08]. (64 audio files; 44 hrs). Digital 
-                              collection managed by AIATSIS. <a href="http://aiatsis.gov.au/sites/default/files/catalogue_resources/irra-wangga_08_interim_finding_aid_1.pdf" target="_blank">http://aiatsis.gov.au/sites/default/files/catalogue_resources/irra-wangga_08_interim_finding_aid_1.pdf</a></p>
+                              collection managed by AIATSIS. <a href="http://aiatsis.gov.au/sites/default/files/catalogue_resources/irra-wangga_08_interim_finding_aid_1.pdf" target="_blank">Link here.</a></p>
                          <br>      
 
                     </div>
