--- a/index.html
+++ b/index.html
@@ -153,13 +153,16 @@
 
 
 <!-- Research -->
-<br><br><br>
-<center><h1>Research</h1></center>
+
 
 <section id="research" data-stellar-background-ratio="0.5">
-
+ 
      <div class="container">
 
+          <div class="row">
+               <center><h1>Research</h1></center>
+               <br><br><br>
+</div>
           <div class="row">
                <div class="col-sm-6 col-sm-6">
 
