--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 <br><br><br>
 <center><h1>Language communities I work with</h1></center>
 
-     <section id="pricing" data-stellar-background-ratio="0.5">
+     <section id="languagecommunities" data-stellar-background-ratio="0.5">
           <div class="container">
                <div class="row">
                     <p>I work and do research with a number of communities in Mid-West Western Australia and north-east Arnhem Land 
