--- a/index.html
+++ b/index.html
@@ -426,11 +426,10 @@
 
 
      <div class="col-sm-6 col-sm-6">
-          <ul>
-               <il>
-          <div class="project-image4"></div></il>
-          <il><p>Texte here</p></il>
-          </ul>
+   
+          <div class="project-image4"></div>
+          <p>Texte here</p>
+          
      </div>
    
 
