--- a/index.html
+++ b/index.html
@@ -630,6 +630,8 @@
                <center><h1>Presentations</h1></center>
                <br><br><br>
 
+               <center><div class="project-image13"></div></center>
+               
                <div class="row">
                     <div class="container-fluid">
 
