--- a/index.html
+++ b/index.html
@@ -628,10 +628,11 @@
           <div class="container">
 
                <center><h1>Presentations</h1></center>
-               <br><br><br>
+               <br>
 
-               <center><div class="project-image13"></div></center>
-               
+               <div class="project-image13"></div>
+               <br>
+
                <div class="row">
                     <div class="container-fluid">
 
@@ -811,7 +812,10 @@
      <div class="container">
 
           <center><h1>Teaching</h1></center>
-          <br><br><br>
+          <br>
+
+          <div class="project-image12"></div>
+          <br>
 
           <div class="row">
                <div class="container-fluid">
@@ -902,6 +906,11 @@
 
                <p>Private English as an Additional Language or Dialect (EAL/D) Tutor. Perth, Australia and Madrid, Spain. 2014.</p>
 
+               </div>
+          </div>
+     </div>
+</section>
+
 
   <!-- CONTACT -->
   <section id="contact" data-stellar-background-ratio="0.5">
@@ -933,7 +942,19 @@
      </div>
 </section>
 
+	<section>
+          <h2 class="major"><span>Connect</span></h2>
+          <br>
+          <ul class="special">
+               <li><a href="mailto:james.bednall@anu.edu.au" target="_blank"><img src="/images/Contact_Logos/email-icon.png" height="64px"></a></li>
+               <li><a href="https://researchers.anu.edu.au/researchers/bednall-j" target="_blank"><img src="/images/Contact_Logos/logo_ANU_university.png" height="64px"></a></li>
+               <li><a href="https://anu-au.academia.edu/JamesBednall" target="_blank"><img src="/images/Contact_Logos/academia.jpg" height="64px"></a></li>
+               <li><a href="https://www.researchgate.net/profile/James_Bednall" target="_blank"><img src="/images/Contact_Logos/research_gate.png" height="64px"></a></li>
+               <li><a href="https://au.linkedin.com/in/james-bednall-0aa94b64" target="_blank"><img src="/images/Contact_Logos/linkedin.png" height="64px"></a></li>
+               <li><a href="https://orcid.org/0000-0001-6155-2878" target="_blank"><img src="/images/Contact_Logos/orcid_logo.png" height="64px"></a></li>
 
+          </ul>
+     </section>
 
 
      <!-- FOOTER -->
