--- a/index.html
+++ b/index.html
@@ -320,7 +320,9 @@
 
                <div class="col-sm-6 col-sm-6">
                     <br>
-                  <iframe src="https://www.youtube.com/embed/v5K02E-widg" class="resp-iframe" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;" allowfullscreen></iframe>            
+                            
+               
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/v5K02E-widg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                </div>
 
                <div class="col-sm-6 col-sm-6">
