--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
                     <div class="container-fluid">
                          <!-- <h2>Minimal Design</h2> -->
                          <p>I am a lecturer in linguistics at <a href="https://www.batchelor.edu.au/students/courses/higher-education-courses/he-languages-and-linguistics/" target="_blank">
-                              Batchelor Institute of Indigenous Tertiary Education</a>, a visiting fellow at the <a href="https://researchers.anu.edu.au/researchers/bednall-j" target="_blank">Australian National 
+                              Batchelor Institute of Indigenous Tertiary Education (BIITE)</a>, a visiting fellow at the <a href="https://researchers.anu.edu.au/researchers/bednall-j" target="_blank">Australian National 
                               University</a> and a research affiliate with the ARC Centre of Excellence for the Dynamics of Language (<a href="http://www.dynamicsoflanguage.edu.au/team/alumni/" 
                               target="_blank">CoEDL</a>).</p>
 
                          <p>My experience as a linguist spans the research, teaching, community development and not-for-profit sectors, including substantial project 
                               and people management, teamwork, and local/national/international collaboration. Find out more about 
-                              my <a href="#research" class="smoothScroll">research</a>, <a href="#projects" class="smoothScroll">projects</a>, <a href="#publications" 
+                              my <a href="#research">research</a>, <a href="#projects" class="smoothScroll">projects</a>, <a href="#publications" 
                               class="smoothScroll">publications</a> and <a href="#teaching" class="smoothScroll">teaching</a>.</p>
 
                               <p style="font-style: italic; font-size:15px;">Aboriginal and Torres Strait Islander readers are warned that this website contains photos 
