--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
                <div class="col-sm-6 col-sm-6">
                     <div class="research-image"></div>
-                    <p>James Bednall and Badimaya Elder Ollie George (RIP) in Mt Magnet WA, 2015</p>
+                    <h6>James Bednall and Badimaya Elder Ollie George (RIP) in Mt Magnet WA, 2015</h6>
                </div>
             
 
