--- a/index.html
+++ b/index.html
@@ -438,7 +438,8 @@
           general coordination and facilitation of the overall project</p>
 
      <p><strong>Funding</strong>: Mid West Development Commission, Royalties for Regions, the Federal Department of Arts’ Indigenous Languages Support Program
-          Affiliation: Bundiyarra - Irra Wangga Language Centre</p>
+     
+     <p><strong>Affiliation</strong>: Bundiyarra - Irra Wangga Language Centre</p>
 
      </div>
 
