--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
 </head>
 <body>
 
- 
+     <!-- PRE LOADER -->
+     <section class="preloader">
+          <div class="spinner">
+
+               <span class="spinner-rotate"></span>
+               
+          </div>
+     </section>
 
 
      <!-- MENU -->
