--- a/anindilyakwa.html
+++ b/anindilyakwa.html
@@ -39,7 +39,7 @@
 
 
      <!-- MENU -->
-     <section class="navbar custom-navbar navbar-fixed-top" role="navigation">
+     <section class="navbar custom-navbar2 navbar-fixed-top" role="navigation">
           <div class="container">
 
                <div class="navbar-header">
