--- a/anindilyakwa.html
+++ b/anindilyakwa.html
@@ -114,7 +114,7 @@
                     <p>Typologically, Anindilyakwa has been noted for its polysynthetic structure and morphological 
                          complexity. It is a head-marking language, that demonstrates an intricate noun-classifying system, an obligatory system 
                          for cross-referencing and agreement on nominals and verbs, demonstrates productive nominal incorporation, and employs 
-                         various argument-changing affixes within the verbal template (van Egmond 2012: 1; Bednall 2020: 6-7).</p>
+                         various argument-changing affixes within the verbal template (Bednall 2020: 6-7).</p>
                          
                     <p>Anindilyakwa has received a reasonable amount of documentation and description. Below is a list of key linguistic 
                          research that has been undertaken over the last century:</p>
@@ -199,7 +199,7 @@
                          <ul>
                               <li>Groote Eylandt Linguistics. 1993. <i>Eningerribirra-langwa jurra [=Book about all sorts of things]</i>. Angurugu, Australia.</li>
                               <li>Lalara, Rhoda and Alfred Lalara. 2014. <i>When we go walkabout: Yirruwa Yirrilikenuma-langwa</i>. Sydney: Allen & Unwin.</li>
-                              <li>Clan songs, church songs, band music and educational CDs</li>
+                              <li>Clan songs, church songs, band music and educational CDs.</li>
                          </ul>
                          <br>
 
